<resources>
    <string name="app_name">QKit</string>
    <string name="play">play</string>
    <string name="save">Сохранить</string>
    <string name="open">Открыть</string>
    <string name="help">Помощь</string>
    <string name="info">О приложении</string>
    <string name="file_name">Имя файла</string>
    <string name="color">#</string>
    <string name="settings">Настройки проекта</string>
    <string name="empty">null</string>
    <string name="expo">Экспортировать</string>
    <string name="new_">Новый проект</string>
    <string name="x">x:</string>
    <string name="y">y:</string>
    <string name="r">r:</string>
    <string name="w">w:</string>
    <string name="h">h:</string>
    <string name="a">a:</string>
    <string name="b">b:</string>
    <string name="e">e:</string>
    <string name="x1">x1:</string>
    <string name="y1">y1:</string>
    <string name="x2">x2:</string>
    <string name="y2">y2:</string>
    <string name="t">t:</string>
    <string name="s">s:</string>
    <string name="copy">Копировать</string>
    <string name="del">Удалить</string>
    <string name="stroke">stroke</string>
    <string name="center">center</string>
    <string name="comment">comment:</string>
    <string name="add">+</string>
    <string name="rem">-</string>
    <string name="all">all</string>
    <string name="scale">scale</string>
    <string name="rotate">rotate</string>
    <string name="skew">skew</string>
    <string name="move">move</string>
    <string name="n">n:</string>
    <string name="_0">(0;0)</string>
    <string name="_500">(500;500)</string>
</resources>
