<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_mono"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="142dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:columnCount="2"
                android:useDefaultMargins="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:inputType="numberSigned"
                    android:maxLength="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:maxLength="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/w"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3" />
            </GridLayout>

            <CheckBox
                android:id="@+id/stroke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/stroke"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:importantForAutofill="no"
                android:inputType="number"
                android:hint="@string/empty"
                android:maxLength="3"
                android:layout_margin="4dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>