<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_mono"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@null"
            app:srcCompat="@drawable/ic_info" />

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="142dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:columnCount="2"
                android:useDefaultMargins="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x1"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/x1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:inputType="numberSigned"
                    android:maxLength="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y1"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/y1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:maxLength="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x2"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/x2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:maxLength="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y2"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/y2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:maxLength="4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/w"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/empty"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3" />
            </GridLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>